# LinearAlgebra

./: .gitignore  CMakeLists.txt  README.md
include/: equations.h  matrix.h  vector.h
src/: driver.c  equations.c  matrix.c  vector.c
